[package]
name = "petushki"
version = "0.9.0"
authors = ["Brian Anderson <andersrb@gmail.com>", "Ning Sun <sunng@pm.me>"]
license = "MIT/Apache-2.0"
description = "A simple static HTTP file server, for learning and local development"
homepage = "https://github.com/sunng87/petushki"
repository = "https://github.com/sunng87/petushki"
readme = "README.md"
edition = "2018"

[dependencies]
bytes = "0.5"
clap = "2.33.0"
comrak = "0.6.2"
derive_more = "0.15.0"
env_logger = "0.6.2"
futures = "0.3.7"
handlebars = "3.5.1"
http = "0.2"
hyper = "0.13.8"
log = "0.4.8"
mime = "0.3.14"
mime_guess = "2.0.1"
percent-encoding = "2.1.0"
serde = { version = "1.0.102", features = ["derive"] }
tokio = { version = "0.2.22", features = ["fs", "sync", "macros"] }
tokio-util = { version = "0.3", features = ["codec"] }
structopt = "0.2.18"
