[package]
name = "basic-http-server"
version = "0.9.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A simple static HTTP file server, for learning and local development"
homepage = "https://github.com/brson/basic-http-server"
repository = "https://github.com/brson/basic-http-server"
readme = "README.md"
edition = "2021"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
comrak = "0.34"
http = "1"
mime = "0.3"
mime_guess = "2"
percent-encoding = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"
